# rust-claude-code

./: .gitignore  Cargo.toml  LICENSE  PRD.md  README.md  README_CN.md  USAGE.md  build.sh
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  release.yml
src/: config.rs  demo.rs  error.rs  main.rs  performance.rs  security.rs  tests.rs
