[package]
name = "rust-claude-code"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
console = "0.15"
dialoguer = "0.11"
glob = "0.3"
backoff = { version = "0.4", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"

[dev-dependencies]
mockito = "1.4"
tempfile = "3.8"
tokio-test = "0.4"
